--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.19",
+    "random-token": "^0.0.8",
     "run-rs": "^0.7.7"
   }
 }
