chore: pushed .env

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ server/node_modules
 server/data
 server/mongodb-win32-x86_64-2008plus-ssl-4.0.0.zip
 server/mongodb-win32-x86_64-2008plus-ssl-4.0.0
-.env
+# .env
