--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb://localhost:27017/test
+MONGO_URI = mongodb://localhost:27017/Edge-Realty
 server_address = http://localhost:8080
-EMAIL_SERVICE_PASS = yourpassword
-EMAIL_SERVICE_ADDRESS = youremail@gmail.com
+EMAIL_SERVICE_PASS = abnnrzypwzqulhuj
+EMAIL_SERVICE_ADDRESS = journalprojectjs@gmail.com
