test: user, signup and verify email route

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,17 @@
-MONGO_URI = mongodb://localhost:27017/Edge-Realty
-server_address = http://localhost:8080
-EMAIL_SERVICE_PASS = abnnrzypwzqulhuj
-EMAIL_SERVICE_ADDRESS = journalprojectjs@gmail.com
+MONGO_URI = mongodb://localhost:27017/Edge-Realty-Main
+EMAIL_HOST_ADDRESS = projectrichiemoluno@gmail.com
+OAUTH_CLIENT_ID = 13441443710-st8l0bu4sjedf6k11u3oelo93mtc6ehm.apps.googleusercontent.com
+OAUTH_CLIENT_SECRET = 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
+OAUTH_REFRESH_TOKEN = 1//04uL8qBM_MNl2CgYIARAAGAQSNwF-L9Ir3klLp_5ZIKrkG7VjUEWEmPzis5Bx02KXNXLYcB-iuyOW8rCx10WC-2TIaiNJXgLBLzc
+OAUTH_ACCESS_TOKEN = ya29.a0AVA9y1u7KcwiZKAoXdNWnj1a7PbZBp4n0mNK_33leQ4e4OwYqnK-ufmB1qZ1_iSVNfyCNruPnffIU56A_CdDPZa2t-Srvv7NK6sdS2bkCBCT-e_9Pkw9J86BYd2X2Z00he_i9QSrjyLkKruUp-QmEsAGgnTvaCgYKATASAQASFQE65dr8nv57cwAXnapsUuhZj35d4w0163
+ADMIN_EMAIL_ADDRESS = molunorichie@gmail.com
+ADMIN_EMAIL_1 = molunorichie@gmail.com
+ADMIN_EMAIL_2 = richy5592@gmail.com
+ADMIN_EMAIL_3 = richiemoluno@gmail.com
+JWT_SECRET = fasdfasdf4823709rfjaosdfjXn2r5u7x!A%
+JWT_LIFETIME = 1d
+PORT = 5525
+NODEMAILER_USER = 89c58fb523c34d
+NODEMAILER_PASS = 385470ef0e0516
+
+KNCYQssotDTVADUO
